2015-04-13  Thomas Fenzl  <thomas.fenzl@gmx.net>

   * lib/{khmer_exception.hh,{counting,hashbits,hashtable,subset}.cc}: changed 
   khmer_exception to use std::string to fix memory management.

2015-04-14  Michael R. Crusoe  <mcrusoe@msu.edu>

   * khmer/_khmermodule.cc: catch more exceptions
   * tests/test_{sandbox_scripts,subset_graph}.py: make tests more resiliant

2015-04-14  Michael R. Crusoe  <mcrusoe@msu.edu>

   * lib/count.cc: Make CountingHash::abundance_distribution threadsafe
   * khmer/_khmermodule.cc: remove newly unnecessary check for exception
   * tests/test_scripts.py: added test to confirm the above

2015-04-14  Michael R. Crusoe  <mcrusoe@msu.edu>

   * khmer/{__init__.py,_khmermodule.cc},lib/{counting,hashbits,hashtable,
   subset}.cc: catch IO errors and report them.
   * tests/test_hashbits.py: remove write to fixed path in /tmp
   * tests/test_scripts.py: added test for empty counting table file

2015-04-13  Elmar Bucher  <buchere@ohsu.edu>

   * scripts/normalize-by-median.py (main): introduced warning for when at least
   two input files are named the same.

2015-04-13  Andreas Härpfer  <ahaerpfer@gmail.com>

   * doc/dev/getting-started.rst: clarify Conda usage

2015-04-13  Daniel Standage  <daniel.standage@gmail.com>

   * scripts/normalize-by-median.py: Added support to the diginorm script for
   sending output to terminal (stdout) when using the conventional - as the output
   filename. Also removed --append option.
   * tests/test_scripts.py: Added functional test for diginorm stdout, removed
   test of --append option.

2015-04-13  Scott Fay  <scott.a.fay@gmail.com>

   * scripts/filter-abund.py: added checking of input_table by
   `check_file_status()`

2015-04-13  David Lin

   * scripts/abundance-dist.py: disambiguate documentation for force and 
   squash options

2015-04-13  Michael R. Crusoe  <mcrusoe@msu.edu>

   * README.rst,doc/index.rst: added link to gitter.im chat room