@@ -1,3 +1,10 @@
+2015-04-14 Susan Steinman <steinman.tutoring@gmail.com>
+   * khmer/{__init__.py},sandbox/{collect-reads,collect-variants,saturate-by-median},
+      scripts/{do-partition,filter-abund-single,load-graph,load-into-counting,
+      normalize-by-median,trim-low-abund}: pulled out check max collisions logic to init.
+   * khmer/tests/test_scripts.py: modified tests to account for new error message
+
+
 2015-04-13  Thomas Fenzl  <thomas.fenzl@gmx.net>
 
    * lib/{khmer_exception.hh,{counting,hashbits,hashtable,subset}.cc}: changed 
@@ -6,7 +13,7 @@
 2015-04-14  Michael R. Crusoe  <mcrusoe@msu.edu>
 
    * khmer/_khmermodule.cc: catch more exceptions
-   * tests/test_{sandbox_scripts,subset_graph}.py: make tests more resiliant
+   * tests/test_{sandbox_scripts,subset_graph}.py: make tests more resilient
 
 2015-04-14  Michael R. Crusoe  <mcrusoe@msu.edu>
 
